--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@
 	margin-bottom: 10px;
 }
 
-/* DEKSTOP VERSION */
+/* DESKTOP VERSION */
 @media (min-width: 992px) {
 	.navbar-brand {
 		margin-left: 20px;
