--- a/style-2.css
+++ b/style-2.css
@@ -265,3 +265,107 @@
  padding: 10px;
  color:white;
 }
+/*artikel */
+.blog-news{
+ margin: 0;
+ padding: 0 1.5rem;
+ box-sizing: border-box;
+ width: 100%;
+ max-width: 98rem;
+ padding: 5rem;
+ background-color: #fff;
+ box-shadow: : 0 1.4rem 8rem rgba(0,0,0,.2);
+ display: flex;
+ align-items: center;
+ border-radius: .8rem;
+}
+
+.blog-news_img{
+	min-width: 35rem;
+	max-width: 35rem;
+	height: 30rem;
+	transform: translateX(-8rem);
+	position: relative;
+}
+
+.blog-news_img img{
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	display: block;
+	border-radius: .8rem;
+}
+
+.blog-news_img::before{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	content: '';
+	top: 0;
+	left: 0;
+	box-shadow: .5rem .5rem 3rem 1px rgba(0,0,0,.5);
+	border-radius: .8rem;
+} 
+
+.blog-news_date span{
+	display: block;
+	color: rgba(0,0,0,.5);
+	font-size: 1.6rem;
+	font-weight: 600;
+	margin: .5rem 0;
+}
+
+.blog-news_title{
+	font-size: 2.5rem;
+	margin: 1.5rem 0 2rem;
+	text-transform: uppercase;
+	color: #F57B51;
+}
+
+.blog-news_text{
+	margin-bottom: 3rem:
+	font-size:1.4rem;
+	color: rgba(0,0,0,.7); 
+}
+
+.blog-news_cta{
+	display: inline-block;
+	padding: 1.5rem 3rem;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	font-size: 1.2rem;
+	color: #fff;
+	background-image: linear-gradient(to right,#F57B51 0%,#f58a51 100%);
+	border-radius: .8rem;
+	text-decoration: none;
+}
+
+.blog-body{
+ width: 100%;
+ height: 100vh;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ background-color: #1B262C;
+ font-size: 10px;
+ padding: 0 1.5rem;
+}
+
+@media screen and (max-width: 868px){
+	.blog-news{
+		max-width: : 70rem;
+	}
+	
+}
+
+@media screen and (max-width: 768px){
+	.blog-news{
+		padding: 2.5rem;
+		flex-direction: column;
+	}
+	.blog-news_img{
+	min-width: 100%;
+	max-width: 100%;
+	transform: translateX(0,-8rem);
+    }
+}
